// ========================================
// GuangDianArmorStats - 装备属性系�?
// ========================================

plugins {
    id 'java'
}

repositories {
    mavenCentral()
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.6-R0.1-SNAPSHOT'
    compileOnly files('E:/RPG/译梦传说/plugins/RPGCore-1.0.0.jar')
    compileOnly files('E:/RPG/译梦传说/plugins/RPGItems-1.0.0.jar')
    compileOnly files('E:/RPG/译梦传说/plugins/GuangDianClass-1.0.0.jar')
    compileOnly files('E:/RPG/译梦传说/plugins/GuangDianSocket-1.0.0.jar')
    compileOnly files('E:/RPG/译梦传说/plugins/PlaceholderAPI.jar')
    compileOnly files('E:/RPG/译梦传说/plugins/MythicMobs.jar')
}

jar {
    archiveBaseName.set('GuangDianArmorStats')
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--add-modules')
    options.compilerArgs.add('jdk.incubator.vector')
}
